@@ -7,13 +7,15 @@
  */
 package org.opendaylight.yangtools.util;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotSame;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Iterables;
@@ -24,16 +26,12 @@ import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.util.AbstractMap.SimpleEntry;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.ConcurrentModificationException;
 import java.util.Iterator;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.NoSuchElementException;
-import java.util.Set;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 public class OffsetMapTest {
     private final Map<String, String> twoEntryMap = ImmutableMap.of("k1", "v1", "k2", "v2");
@@ -47,8 +45,8 @@ public class OffsetMapTest {
         return (ImmutableOffsetMap<String, String>) ImmutableOffsetMap.unorderedCopyOf(twoEntryMap);
     }
 
-    @Before
-    public void setup() {
+    @BeforeEach
+    void setup() {
         OffsetMapCache.invalidateCache();
     }
 
@@ -58,26 +56,26 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testCopyEmptyMap() {
-        final Map<String, String> source = Collections.emptyMap();
-        final Map<String, String> result = ImmutableOffsetMap.orderedCopyOf(source);
+    void testCopyEmptyMap() {
+        final var source = Map.of();
+        final var result = ImmutableOffsetMap.orderedCopyOf(source);
 
         assertEquals(source, result);
-        assertTrue(result instanceof ImmutableMap);
+        assertInstanceOf(ImmutableMap.class, result);
     }
 
     @Test
-    public void testCopySingletonMap() {
-        final Map<String, String> source = Collections.singletonMap("a", "b");
-        final Map<String, String> result = ImmutableOffsetMap.orderedCopyOf(source);
+    void testCopySingletonMap() {
+        final var source = Map.of("a", "b");
+        final var result = ImmutableOffsetMap.orderedCopyOf(source);
 
         assertEquals(source, result);
-        assertTrue(result instanceof SharedSingletonMap);
+        assertInstanceOf(SharedSingletonMap.class, result);
     }
 
     @Test
-    public void testCopyMap() {
-        final ImmutableOffsetMap<String, String> map = createMap();
+    void testCopyMap() {
+        final var map = createMap();
 
         // Equality in both directions
         assertEquals(twoEntryMap, map);
@@ -92,8 +90,8 @@ public class OffsetMapTest {
         // Should result in the same object
         assertSame(map, ImmutableOffsetMap.orderedCopyOf(map));
 
-        final Map<String, String> mutable = map.toModifiableMap();
-        final Map<String, String> copy = ImmutableOffsetMap.orderedCopyOf(mutable);
+        final var mutable = map.toModifiableMap();
+        final var copy = ImmutableOffsetMap.orderedCopyOf(mutable);
 
         assertEquals(mutable, copy);
         assertEquals(map, copy);
@@ -102,17 +100,17 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testImmutableSimpleEquals() {
-        final Map<String, String> map = createMap();
+    void testImmutableSimpleEquals() {
+        final var map = createMap();
 
-        assertTrue(map.equals(map));
-        assertFalse(map.equals(null));
-        assertFalse(map.equals("string"));
+        assertEquals(map, map);
+        assertNotEquals(null, map);
+        assertNotEquals("string", map);
     }
 
     @Test
-    public void testImmutableGet() {
-        final Map<String, String> map = createMap();
+    void testImmutableGet() {
+        final var map = createMap();
 
         assertEquals("v1", map.get("k1"));
         assertEquals("v2", map.get("k2"));
@@ -121,33 +119,33 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testImmutableGuards() {
-        final Map<String, String> map = createMap();
+    void testImmutableGuards() {
+        final var map = createMap();
 
-        final Collection<String> values = map.values();
+        final var values = map.values();
         assertThrows(UnsupportedOperationException.class, () -> values.add("v1"));
         assertThrows(UnsupportedOperationException.class, () -> values.remove("v1"));
         assertThrows(UnsupportedOperationException.class, () -> values.clear());
 
-        final Iterator<String> vit = values.iterator();
+        final var vit = values.iterator();
         vit.next();
         assertThrows(UnsupportedOperationException.class, () -> vit.remove());
 
-        final Set<String> keySet = map.keySet();
+        final var keySet = map.keySet();
         assertThrows(UnsupportedOperationException.class, () -> keySet.add("k1"));
         assertThrows(UnsupportedOperationException.class, () -> keySet.clear());
         assertThrows(UnsupportedOperationException.class, () -> keySet.remove("k1"));
 
-        final Iterator<String> kit = keySet.iterator();
+        final var kit = keySet.iterator();
         kit.next();
         assertThrows(UnsupportedOperationException.class, () -> kit.remove());
 
-        final Set<Entry<String, String>> entrySet = map.entrySet();
+        final var entrySet = map.entrySet();
         assertThrows(UnsupportedOperationException.class, () -> entrySet.clear());
         assertThrows(UnsupportedOperationException.class, () -> entrySet.add(new SimpleEntry<>("k1", "v1")));
         assertThrows(UnsupportedOperationException.class, () -> entrySet.remove(new SimpleEntry<>("k1", "v1")));
 
-        final Iterator<Entry<String, String>> eit = entrySet.iterator();
+        final var eit = entrySet.iterator();
         eit.next();
         assertThrows(UnsupportedOperationException.class, () -> eit.remove());
 
@@ -158,8 +156,8 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableGet() {
-        final Map<String, String> map = createMap().toModifiableMap();
+    void testMutableGet() {
+        final var map = createMap().toModifiableMap();
 
         map.put("k3", "v3");
         assertEquals("v1", map.get("k1"));
@@ -170,20 +168,20 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testImmutableSize() {
-        final Map<String, String> map = createMap();
+    void testImmutableSize() {
+        final var map = createMap();
         assertEquals(2, map.size());
     }
 
     @Test
-    public void testImmutableIsEmpty() {
-        final Map<String, String> map = createMap();
+    void testImmutableIsEmpty() {
+        final var map = createMap();
         assertFalse(map.isEmpty());
     }
 
     @Test
-    public void testImmutableContains() {
-        final Map<String, String> map = createMap();
+    void testImmutableContains() {
+        final var map = createMap();
         assertTrue(map.containsKey("k1"));
         assertTrue(map.containsKey("k2"));
         assertFalse(map.containsKey("non-existent"));
@@ -193,17 +191,17 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testImmutableEquals() {
-        final Map<String, String> map = createMap();
+    void testImmutableEquals() {
+        final var map = createMap();
 
-        assertFalse(map.equals(threeEntryMap));
-        assertFalse(map.equals(ImmutableMap.of("k1", "v1", "k3", "v3")));
-        assertFalse(map.equals(ImmutableMap.of("k1", "v1", "k2", "different-value")));
+        assertNotEquals(map, threeEntryMap);
+        assertNotEquals(map, ImmutableMap.of("k1", "v1", "k3", "v3"));
+        assertNotEquals(map, ImmutableMap.of("k1", "v1", "k2", "different-value"));
     }
 
     @Test
-    public void testMutableContains() {
-        final Map<String, String> map = createMap().toModifiableMap();
+    void testMutableContains() {
+        final var map = createMap().toModifiableMap();
         map.put("k3", "v3");
         assertTrue(map.containsKey("k1"));
         assertTrue(map.containsKey("k2"));
@@ -213,23 +211,23 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testtoModifiableMap() {
-        final ImmutableOffsetMap<String, String> source = createMap();
-        final Map<String, String> result = source.toModifiableMap();
+    void testtoModifiableMap() {
+        final var source = createMap();
+        final var result = source.toModifiableMap();
 
         // The two maps should be equal, but isolated
-        assertTrue(result instanceof MutableOffsetMap);
+        assertInstanceOf(MutableOffsetMap.class, result);
         assertEquals(source, result);
         assertEquals(result, source);
 
         // Quick test for clearing MutableOffsetMap
         result.clear();
         assertEquals(0, result.size());
-        assertEquals(Collections.emptyMap(), result);
+        assertEquals(Map.of(), result);
 
         // The two maps should differ now
-        assertFalse(source.equals(result));
-        assertFalse(result.equals(source));
+        assertNotEquals(source, result);
+        assertNotEquals(result, source);
 
         // The source map should still equal the template
         assertEquals(twoEntryMap, source);
@@ -237,15 +235,15 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testReusedFields() {
-        final ImmutableOffsetMap<String, String> source = createMap();
-        final MutableOffsetMap<String, String> mutable = source.toModifiableMap();
+    void testReusedFields() {
+        final var source = createMap();
+        final var mutable = source.toModifiableMap();
 
         // Should not affect the result
         mutable.remove("non-existent");
 
         // Resulting map should be equal, but not the same object
-        final ImmutableOffsetMap<String, String> result = (ImmutableOffsetMap<String, String>) mutable
+        final var result = (ImmutableOffsetMap<String, String>) mutable
                 .toUnmodifiableMap();
         assertNotSame(source, result);
         assertEquals(source, result);
@@ -256,31 +254,31 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testReusedOffsets() {
-        final ImmutableOffsetMap<String, String> source = createMap();
-        final MutableOffsetMap<String, String> mutable = source.toModifiableMap();
+    void testReusedOffsets() {
+        final var source = createMap();
+        final var mutable = source.toModifiableMap();
 
         mutable.remove("k1");
         mutable.put("k1", "v1");
 
-        final ImmutableOffsetMap<String, String> result = (ImmutableOffsetMap<String, String>) mutable
+        final var result = (ImmutableOffsetMap<String, String>) mutable
                 .toUnmodifiableMap();
-        assertTrue(source.equals(result));
-        assertTrue(result.equals(source));
+        assertEquals(source, result);
+        assertEquals(result, source);
 
         // Iterator order must not be preserved
         assertFalse(Iterators.elementsEqual(source.entrySet().iterator(), result.entrySet().iterator()));
     }
 
     @Test
-    public void testReusedOffsetsUnordered() {
-        final ImmutableOffsetMap<String, String> source = unorderedMap();
-        final MutableOffsetMap<String, String> mutable = source.toModifiableMap();
+    void testReusedOffsetsUnordered() {
+        final var source = unorderedMap();
+        final var mutable = source.toModifiableMap();
 
         mutable.remove("k1");
         mutable.put("k1", "v1");
 
-        final ImmutableOffsetMap<String, String> result = (ImmutableOffsetMap<String, String>) mutable
+        final var result = (ImmutableOffsetMap<String, String>) mutable
                 .toUnmodifiableMap();
         assertEquals(source, result);
 
@@ -293,18 +291,18 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testEmptyMutable() throws CloneNotSupportedException {
-        final MutableOffsetMap<String, String> map = MutableOffsetMap.ordered();
+    void testEmptyMutable() throws CloneNotSupportedException {
+        final var map = MutableOffsetMap.ordered();
         assertTrue(map.isEmpty());
 
-        final Map<String, String> other = map.clone();
+        final var other = map.clone();
         assertEquals(other, map);
         assertNotSame(other, map);
     }
 
     @Test
-    public void testMutableToEmpty() {
-        final MutableOffsetMap<String, String> mutable = createMap().toModifiableMap();
+    void testMutableToEmpty() {
+        final var mutable = createMap().toModifiableMap();
 
         mutable.remove("k1");
         mutable.remove("k2");
@@ -314,34 +312,34 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableToSingleton() {
-        final MutableOffsetMap<String, String> mutable = createMap().toModifiableMap();
+    void testMutableToSingleton() {
+        final var mutable = createMap().toModifiableMap();
 
         mutable.remove("k1");
 
-        final Map<String, String> result = mutable.toUnmodifiableMap();
+        final var result = mutable.toUnmodifiableMap();
 
         // Should devolve to a singleton
-        assertTrue(result instanceof SharedSingletonMap);
+        assertInstanceOf(SharedSingletonMap.class, result);
         assertEquals(ImmutableMap.of("k2", "v2"), result);
     }
 
     @Test
-    public void testMutableToNewSingleton() {
-        final MutableOffsetMap<String, String> mutable = createMap().toModifiableMap();
+    void testMutableToNewSingleton() {
+        final var mutable = createMap().toModifiableMap();
 
         mutable.remove("k1");
         mutable.put("k3", "v3");
 
-        final Map<String, String> result = mutable.toUnmodifiableMap();
+        final var result = mutable.toUnmodifiableMap();
 
-        assertTrue(result instanceof ImmutableOffsetMap);
+        assertInstanceOf(ImmutableOffsetMap.class, result);
         assertEquals(ImmutableMap.of("k2", "v2", "k3", "v3"), result);
     }
 
     @Test
-    public void testMutableSize() {
-        final MutableOffsetMap<String, String> mutable = createMap().toModifiableMap();
+    void testMutableSize() {
+        final var mutable = createMap().toModifiableMap();
         assertEquals(2, mutable.size());
 
         mutable.put("k3", "v3");
@@ -353,8 +351,8 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testExpansionWithOrder() {
-        final MutableOffsetMap<String, String> mutable = createMap().toModifiableMap();
+    void testExpansionWithOrder() {
+        final var mutable = createMap().toModifiableMap();
 
         mutable.remove("k1");
         mutable.put("k3", "v3");
@@ -362,17 +360,17 @@ public class OffsetMapTest {
 
         assertEquals(ImmutableMap.of("k1", "v1", "k3", "v3"), mutable.newKeys());
 
-        final Map<String, String> result = mutable.toUnmodifiableMap();
+        final var result = mutable.toUnmodifiableMap();
 
-        assertTrue(result instanceof ImmutableOffsetMap);
+        assertInstanceOf(ImmutableOffsetMap.class, result);
         assertEquals(threeEntryMap, result);
         assertEquals(result, threeEntryMap);
         assertFalse(Iterators.elementsEqual(threeEntryMap.entrySet().iterator(), result.entrySet().iterator()));
     }
 
     @Test
-    public void testExpansionWithoutOrder() {
-        final MutableOffsetMap<String, String> mutable = unorderedMap().toModifiableMap();
+    void testExpansionWithoutOrder() {
+        final var mutable = unorderedMap().toModifiableMap();
 
         mutable.remove("k1");
         mutable.put("k3", "v3");
@@ -380,24 +378,24 @@ public class OffsetMapTest {
 
         assertEquals(ImmutableMap.of("k3", "v3"), mutable.newKeys());
 
-        final Map<String, String> result = mutable.toUnmodifiableMap();
+        final var result = mutable.toUnmodifiableMap();
 
-        assertTrue(result instanceof ImmutableOffsetMap);
+        assertInstanceOf(ImmutableOffsetMap.class, result);
         assertEquals(threeEntryMap, result);
         assertEquals(result, threeEntryMap);
         assertTrue(Iterators.elementsEqual(threeEntryMap.entrySet().iterator(), result.entrySet().iterator()));
     }
 
     @Test
-    public void testReplacedValue() {
-        final ImmutableOffsetMap<String, String> source = createMap();
-        final MutableOffsetMap<String, String> mutable = source.toModifiableMap();
+    void testReplacedValue() {
+        final var source = createMap();
+        final var mutable = source.toModifiableMap();
 
         mutable.put("k1", "replaced");
 
-        final ImmutableOffsetMap<String, String> result = (ImmutableOffsetMap<String, String>) mutable
+        final var result = (ImmutableOffsetMap<String, String>) mutable
                 .toUnmodifiableMap();
-        final Map<String, String> reference = ImmutableMap.of("k1", "replaced", "k2", "v2");
+        final var reference = ImmutableMap.of("k1", "replaced", "k2", "v2");
 
         assertEquals(reference, result);
         assertEquals(result, reference);
@@ -406,8 +404,8 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testCloneableFlipping() throws CloneNotSupportedException {
-        final MutableOffsetMap<String, String> source = createMap().toModifiableMap();
+    void testCloneableFlipping() throws CloneNotSupportedException {
+        final var source = createMap().toModifiableMap();
 
         // Must clone before mutation
         assertTrue(source.needClone());
@@ -421,7 +419,7 @@ public class OffsetMapTest {
         assertFalse(source.needClone());
 
         // Create a clone of the map, which shares the array
-        final MutableOffsetMap<String, String> result = source.clone();
+        final var result = source.clone();
         assertFalse(source.needClone());
         assertTrue(result.needClone());
         assertSame(source.array(), result.array());
@@ -432,17 +430,17 @@ public class OffsetMapTest {
         assertTrue(result.needClone());
 
         // Forced copy, no cloning needed, but maps are equal
-        final ImmutableOffsetMap<String, String> immutable = (ImmutableOffsetMap<String, String>) source
+        final var immutable = (ImmutableOffsetMap<String, String>) source
                 .toUnmodifiableMap();
         assertFalse(source.needClone());
-        assertTrue(source.equals(immutable));
-        assertTrue(immutable.equals(source));
+        assertEquals(source, immutable);
+        assertEquals(immutable, source);
         assertTrue(Iterables.elementsEqual(source.entrySet(), immutable.entrySet()));
     }
 
     @Test
-    public void testCloneableFlippingUnordered() throws CloneNotSupportedException {
-        final MutableOffsetMap<String, String> source = unorderedMap().toModifiableMap();
+    void testCloneableFlippingUnordered() throws CloneNotSupportedException {
+        final var source = unorderedMap().toModifiableMap();
 
         // Must clone before mutation
         assertTrue(source.needClone());
@@ -456,7 +454,7 @@ public class OffsetMapTest {
         assertFalse(source.needClone());
 
         // Create a clone of the map, which shares the array
-        final MutableOffsetMap<String, String> result = source.clone();
+        final var result = source.clone();
         assertFalse(source.needClone());
         assertTrue(result.needClone());
         assertSame(source.array(), result.array());
@@ -467,15 +465,14 @@ public class OffsetMapTest {
         assertTrue(result.needClone());
 
         // Creates a immutable view, which shares the array
-        final ImmutableOffsetMap<String, String> immutable =
-                (ImmutableOffsetMap<String, String>) source.toUnmodifiableMap();
+        final var immutable = (ImmutableOffsetMap<String, String>) source.toUnmodifiableMap();
         assertTrue(source.needClone());
         assertSame(source.array(), immutable.objects());
     }
 
     @Test
-    public void testMutableEntrySet() {
-        final MutableOffsetMap<String, String> map = createMap().toModifiableMap();
+    void testMutableEntrySet() {
+        final var map = createMap().toModifiableMap();
 
         assertTrue(map.entrySet().add(new SimpleEntry<>("k3", "v3")));
         assertTrue(map.containsKey("k3"));
@@ -503,27 +500,27 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableSimpleEquals() {
-        final ImmutableOffsetMap<String, String> source = createMap();
-        final Map<String, String> map = source.toModifiableMap();
+    void testMutableSimpleEquals() {
+        final var source = createMap();
+        final var map = source.toModifiableMap();
 
-        assertTrue(map.equals(map));
-        assertFalse(map.equals(null));
-        assertFalse(map.equals("string"));
-        assertTrue(map.equals(source));
+        assertEquals(map, map);
+        assertNotEquals(null, map);
+        assertNotEquals("string", map);
+        assertEquals(map, source);
     }
 
     @Test
-    public void testMutableSimpleHashCode() {
-        final Map<String, String> map = createMap().toModifiableMap();
+    void testMutableSimpleHashCode() {
+        final var map = createMap().toModifiableMap();
 
         assertEquals(twoEntryMap.hashCode(), map.hashCode());
     }
 
     @Test
-    public void testMutableIteratorBasics() {
-        final MutableOffsetMap<String, String> map = createMap().toModifiableMap();
-        final Iterator<Entry<String, String>> it = map.entrySet().iterator();
+    void testMutableIteratorBasics() {
+        final var map = createMap().toModifiableMap();
+        final var it = map.entrySet().iterator();
 
         // Not advanced, remove should fail
         assertThrows(IllegalStateException.class, () -> it.remove());
@@ -539,9 +536,9 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableIteratorWithRemove() {
-        final MutableOffsetMap<String, String> map = createMap().toModifiableMap();
-        final Iterator<Entry<String, String>> it = map.entrySet().iterator();
+    void testMutableIteratorWithRemove() {
+        final var map = createMap().toModifiableMap();
+        final var it = map.entrySet().iterator();
 
         // Advance one element
         assertTrue(it.hasNext());
@@ -559,9 +556,9 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableIteratorOffsetReplaceWorks() {
-        final MutableOffsetMap<String, String> map = createMap().toModifiableMap();
-        final Iterator<Entry<String, String>> it = map.entrySet().iterator();
+    void testMutableIteratorOffsetReplaceWorks() {
+        final var map = createMap().toModifiableMap();
+        final var it = map.entrySet().iterator();
         it.next();
 
         map.put("k1", "new-v1");
@@ -569,10 +566,10 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableIteratorNewReplaceWorks() {
-        final MutableOffsetMap<String, String> map = createMap().toModifiableMap();
+    void testMutableIteratorNewReplaceWorks() {
+        final var map = createMap().toModifiableMap();
         map.put("k3", "v3");
-        final Iterator<Entry<String, String>> it = map.entrySet().iterator();
+        final var it = map.entrySet().iterator();
         it.next();
 
         map.put("k3", "new-v3");
@@ -580,12 +577,12 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableIteratorOffsetAddBreaks() {
-        final MutableOffsetMap<String, String> map = createMap().toModifiableMap();
+    void testMutableIteratorOffsetAddBreaks() {
+        final var map = createMap().toModifiableMap();
         map.put("k3", "v3");
         map.remove("k1");
 
-        final Iterator<Entry<String, String>> it = map.entrySet().iterator();
+        final var it = map.entrySet().iterator();
         it.next();
 
         map.put("k1", "new-v1");
@@ -593,9 +590,9 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableIteratorNewAddBreaks() {
-        final MutableOffsetMap<String, String> map = createMap().toModifiableMap();
-        final Iterator<Entry<String, String>> it = map.entrySet().iterator();
+    void testMutableIteratorNewAddBreaks() {
+        final var map = createMap().toModifiableMap();
+        final var it = map.entrySet().iterator();
         it.next();
 
         map.put("k3", "v3");
@@ -603,9 +600,9 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableIteratorOffsetRemoveBreaks() {
-        final MutableOffsetMap<String, String> map = createMap().toModifiableMap();
-        final Iterator<Entry<String, String>> it = map.entrySet().iterator();
+    void testMutableIteratorOffsetRemoveBreaks() {
+        final var map = createMap().toModifiableMap();
+        final var it = map.entrySet().iterator();
         it.next();
 
         map.remove("k1");
@@ -613,10 +610,10 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableIteratorNewRemoveBreaks() {
-        final MutableOffsetMap<String, String> map = createMap().toModifiableMap();
+    void testMutableIteratorNewRemoveBreaks() {
+        final var map = createMap().toModifiableMap();
         map.put("k3", "v3");
-        final Iterator<Entry<String, String>> it = map.entrySet().iterator();
+        final var it = map.entrySet().iterator();
         it.next();
 
         map.remove("k3");
@@ -624,11 +621,11 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testMutableCrossIteratorRemove() {
-        final MutableOffsetMap<String, String> map = createMap().toModifiableMap();
-        final Set<Entry<String, String>> es = map.entrySet();
-        final Iterator<Entry<String, String>> it1 = es.iterator();
-        final Iterator<Entry<String, String>> it2 = es.iterator();
+    void testMutableCrossIteratorRemove() {
+        final var map = createMap().toModifiableMap();
+        final var es = map.entrySet();
+        final var it1 = es.iterator();
+        final var it2 = es.iterator();
 
         // Remove k1 via it1
         it1.next();
@@ -641,17 +638,17 @@ public class OffsetMapTest {
     }
 
     @Test
-    public void testImmutableSerialization() throws IOException, ClassNotFoundException {
-        final Map<String, String> source = createMap();
+    void testImmutableSerialization() throws IOException, ClassNotFoundException {
+        final var source = createMap();
 
-        final ByteArrayOutputStream bos = new ByteArrayOutputStream();
+        final var bos = new ByteArrayOutputStream();
         try (ObjectOutputStream oos = new ObjectOutputStream(bos)) {
             oos.writeObject(source);
         }
 
-        final ObjectInputStream ois = new ObjectInputStream(new ByteArrayInputStream(bos.toByteArray()));
+        final var ois = new ObjectInputStream(new ByteArrayInputStream(bos.toByteArray()));
         @SuppressWarnings("unchecked")
-        final Map<String, String> result = (Map<String, String>) ois.readObject();
+        final var result = (Map<String, String>) ois.readObject();
 
         assertEquals(source, result);
     }
